actually fix settings breaking on small width windows....

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -90,10 +90,11 @@
     padding: 10px;
     position: absolute;
     left: 50%;
+    width: 250px;
     transform: translateX(-50%);
     transition: opacity 200ms;
     .setting {
-      width: 221px;
+      width: 100%;
       height: 20px;
       margin: 6px;
       span {
